[v7r008partial] update: - fix on jump failed - link template for link table page generation (include style)

--- a/static_files/main.css
+++ b/static_files/main.css
@@ -65,3 +65,19 @@ left: 0;
 width: 100%;
 text-align: center;
 }
+
+table {
+width: 100%;
+border: 1px solid #e5e5e5;
+border-collapse: collapse;
+}
+td, th {
+padding: .25rem .5rem;
+border: 1px solid #e5e5e5;
+white-space: nowrap;
+text-align: left;
+}
+tbody tr:nth-child(odd) td,
+tbody tr:nth-child(odd) th {
+background-color: #f9f9f9;
+}
